# python-smcp-prep

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
cash_register/: __init__.py  exceptions.py  models.py  register.py
tests/: test_register.py
