[tool.poetry]
name = "python-smcp-prep"
version = "0.1.1"
description = "Small Python library that models a basic cash register for an SMCP store."
authors = ["Ismail Abdelouahab <ismailabdelouahab0@gmail.com>"]
readme = "README.md"
packages = [{ include = "cash_register" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pytest = ">=8.4.1,<9.0.0"
pytest-cov = ">=6.2.1,<7.0.0"
flake8 = ">=7.3.0,<8.0.0"
black = ">=25.1.0,<26.0.0"
isort = ">=6.0.1,<7.0.0"
mypy = ">=1.17.0,<2.0.0"
pre-commit = "^4.2.0"

[tool.poetry.scripts]
test = "pytest"
coverage = "pytest --cov=cash_register --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 100
extend-ignore = ["E501", "E203", "W503"]

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
strict = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
